--- a/o-mnie.html
+++ b/o-mnie.html
@@ -9,7 +9,7 @@
 <body>
     <main class="profile-section">
         <div class="profile-container">
-            <img src="profilowe.png" alt="zdjecie profilowe" class="profile-image">
+            <img src="evernight.jpg" alt="zdjecie profilowe" class="profile-image">
             <h1 class="profile-name">Julia Gnatek</h1>
         </div>
     </main>
