dodanie JavaScript do kodu

--- a/o-mnie.html
+++ b/o-mnie.html
@@ -9,7 +9,7 @@
 <body>
     <main class="profile-section">
         <div class="profile-container">
-            <img src="profilowe.png" alt="zdjecie profilowe" class="profile-image">
+            <img src="evernight.jpg" alt="zdjecie profilowe" class="profile-image">
             <h1 class="profile-name">Julia Gnatek</h1>
         </div>
     </main>
@@ -26,5 +26,8 @@
         <h3>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Magnam delectus tempora, aut totam voluptatibus eos nisi ipsam molestias excepturi facilis dolore dolorum adipisci fugit quia quisquam, placeat tenetur ducimus optio!</h3>
         <h3>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Magnam delectus tempora, aut totam voluptatibus eos nisi ipsam molestias excepturi facilis dolore dolorum adipisci fugit quia quisquam, placeat tenetur ducimus optio!</h3>
     </nav>
+    <footer class="footer">
+        <p>Copyright &COPY; 2025</p>
+    </footer>
 </body>
 </html>
