--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
     <main class="profile-section">
         <div class="profile-container">
-            <img src="profilowe.png" alt="zdjecie profilowe" class="profile-image">
+            <img src="evernight.jpg" alt="zdjecie profilowe" class="profile-image">
             <h1 class="profile-name">Julia Gnatek</h1>
         </div>
     </main>
@@ -19,5 +19,26 @@
         <a href="kontakt.html" class="nav-button">Kontakt</a>
         <a href="portfolio.html" class="nav-button">Portfolio</a>
     </nav>
+    <footer class="footer">
+        <p>Copyright &COPY; 2025</p>
+    </footer>
+    <script>
+        document.addEventListener('DOMContentLoaded', function() {
+            alert('Witaj na mojej stronie!');
+        });
+        const button = document.querySelector('.nav-button');
+        button.addEventListener('mouseenter', function() {
+            this.style.backgroundColor = '#662f5d';
+        });
+        button.addEventListener('mouseleave', function() {
+            this.style.backgroundColor = '#550A68A1';
+        });
+
+        setInterval(() => {
+            let d = new Date();
+            document.querySelector('footer').textContent = "© Julia Gnatek | " + d.toLocaleString();
+        }, 1000);
+        
+    </script>
 </body>
 </html>
