--- a/kontakt.html
+++ b/kontakt.html
@@ -9,7 +9,7 @@
 <body>
     <main class="profile-section">
         <div class="profile-container">
-            <img src="profilowe.png" alt="zdjecie profilowe" class="profile-image">
+            <img src="evernight.jpg" alt="zdjecie profilowe" class="profile-image">
             <h1 class="profile-name">Julia Gnatek</h1>
         </div>
     </main>
@@ -27,5 +27,8 @@
         <h2>Telegram: yummygaydrink</h2></br>
         <h2>Instagram: yummygaydrink_</h2></br>
     </nav>
+    <footer class="footer">
+        <p>Copyright &COPY; 2025</p>
+    </footer>
 </body>
 </html>
