--- a/portfolio.html
+++ b/portfolio.html
@@ -9,7 +9,7 @@
 <body>
     <main class="profile-section">
         <div class="profile-container">
-            <img src="profilowe.png" alt="zdjecie profilowe" class="profile-image">
+            <img src="evernight.jpg" alt="zdjecie profilowe" class="profile-image">
             <h1 class="profile-name">Julia Gnatek</h1>
         </div>
     </main>
@@ -20,6 +20,23 @@
         <a href="kontakt.html" class="nav-button">Kontakt</a>
     </nav>
 
-    
+    <nav class="portfolio-section">
+        <h2>Moje Portfolio:</h2></br>
+        <div class="portfolio-item">
+            <h3>Projekt 1</h3>
+            <p>web-design</p>
+        </div>
+        <div class="portfolio-item">
+            <h3>Projekt 2</h3>
+            <p>‎ </p>
+        </div>
+        <div class="portfolio-item">
+            <h3>Projekt 3</h3>
+            <p>‎ </p>
+        </div>
+    </nav>
+    <footer class="footer">
+        <p>Copyright &COPY; 2025</p>
+    </footer>
 </body>
 </html>
