--- a/o-mnie.html
+++ b/o-mnie.html
@@ -18,16 +18,23 @@
         <a href="index.html" class="nav-button">Strona główna</a>
         <a href="kontakt.html" class="nav-button">Kontakt</a>
         <a href="portfolio.html" class="nav-button">Portfolio</a>
+        <a href="umiejetnosci.html" class="nav-button">Umiejetnosci</a>
     </nav>
+    <section class="container-abt-me" style="width: 80%;">
+    <div class="typewriter-box">
+            <div class="typewriter" id="typewriter">
+                <span id="text"></span><span class="cursor"></span>
+            </div>
+        </div>
+    </section>
 
-    <nav class="about-me">
-        <h2>O mnie:</h2></br>
-        <h3>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Magnam delectus tempora, aut totam voluptatibus eos nisi ipsam molestias excepturi facilis dolore dolorum adipisci fugit quia quisquam, placeat tenetur ducimus optio!</h3>
-        <h3>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Magnam delectus tempora, aut totam voluptatibus eos nisi ipsam molestias excepturi facilis dolore dolorum adipisci fugit quia quisquam, placeat tenetur ducimus optio!</h3>
-        <h3>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Magnam delectus tempora, aut totam voluptatibus eos nisi ipsam molestias excepturi facilis dolore dolorum adipisci fugit quia quisquam, placeat tenetur ducimus optio!</h3>
-    </nav>
+    
+    <button id="scrollToTopBtn">⬆️ </button>
+    </br></br></br></br></br>
     <footer class="footer">
-        <p>Copyright &COPY; 2025</p>
+        <div class="clock" id="clock">Ładowanie...</div>
+        <div class="copyright">© 2025 Moje Portfolio. Wszystkie prawa zastrzeżone.</div>
     </footer>
+    <script src="o-mnie.js"></script>
 </body>
 </html>
