--- a/kontakt.html
+++ b/kontakt.html
@@ -19,6 +19,7 @@
         <a href="o-mnie.html" class="nav-button">O mnie</a>
         <a href="portfolio.html" class="nav-button">Portfolio</a>
         <a href="umiejetnosci.html" class="nav-button">Umiejetnosci</a>
+        <a href="statystyki.html" class="nav-button">Statystyki</a>
     </nav>
 
     <nav class="contacts">
