--- a/o-mnie.html
+++ b/o-mnie.html
@@ -19,6 +19,7 @@
         <a href="kontakt.html" class="nav-button">Kontakt</a>
         <a href="portfolio.html" class="nav-button">Portfolio</a>
         <a href="umiejetnosci.html" class="nav-button">Umiejetnosci</a>
+        <a href="statystyki.html" class="nav-button">Statystyki</a>
     </nav>
     <section class="container-abt-me" style="width: 80%;">
     <div class="typewriter-box">
