--- a/portfolio.html
+++ b/portfolio.html
@@ -19,6 +19,7 @@
         <a href="o-mnie.html" class="nav-button">O mnie</a>
         <a href="kontakt.html" class="nav-button">Kontakt</a>
         <a href="umiejetnosci.html" class="nav-button">Umiejetnosci</a>
+        <a href="statystyki.html" class="nav-button">Statystyki</a>
     </nav>
     <section class="container" style="width: 60%;">
     <div class="filters">
